--- a/style.css
+++ b/style.css
@@ -2838,7 +2838,7 @@ object {
   font-size: 1.8rem;
   line-height: 2.6rem;
 }
-.page-template-page-landing-v2 #cta-bar {
+.page-template-page-landing-v2 #cta-bar, .page-template-page-landing-v2 #cta-bar-custom {
   float: left;
   width: 100%;
   background: #ed4b2e;
@@ -2859,14 +2859,14 @@ object {
   cursor: pointer;
 }
 @media (min-width: 992px) {
-  .page-template-page-landing-v2 #cta-bar {
+  .page-template-page-landing-v2 #cta-bar, .page-template-page-landing-v2 #cta-bar-custom {
     position: relative;
     bottom: initial;
     z-index: 1;
     cursor: arrow;
   }
 }
-.page-template-page-landing-v2 #cta-bar a {
+.page-template-page-landing-v2 #cta-bar a, .page-template-page-landing-v2 #cta-bar-custom a {
   text-align: center;
   padding: 20px 0;
   margin: 0 auto;
@@ -2880,23 +2880,23 @@ object {
   color: white;
 }
 @media (min-width: 768px) {
-  .page-template-page-landing-v2 #cta-bar a {
+  .page-template-page-landing-v2 #cta-bar a, .page-template-page-landing-v2 #cta-bar-custom a {
     padding-right: 0px;
   }
 }
 @media (min-width: 992px) {
-  .page-template-page-landing-v2 #cta-bar a {
+  .page-template-page-landing-v2 #cta-bar a, .page-template-page-landing-v2 #cta-bar-custom a {
     font-size: 2rem;
   }
 }
-.page-template-page-landing-v2 #cta-bar a .fa {
+.page-template-page-landing-v2 #cta-bar a .fa, .page-template-page-landing-v2 #cta-bar-custom a .fa {
   padding: 10px;
   border-radius: 50%;
   border: 1px solid white;
   margin-left: 10px;
   transition: 0.2s all ease-in-out;
 }
-.page-template-page-landing-v2 #cta-bar a:hover .fa {
+.page-template-page-landing-v2 #cta-bar a:hover .fa, .page-template-page-landing-v2 #cta-bar-custom a:hover .fa {
   background: white;
   color: #ef6248;
   cursor: pointer;
@@ -3533,7 +3533,7 @@ object {
   }
 }
 .page-template-page-program #main #cta-bar,
-.category #main #cta-bar {
+.category #main #cta-bar, .category #main #cta-bar-custom {
   position: fixed;
   bottom: 0;
   float: left;
@@ -3549,13 +3549,13 @@ object {
 }
 @media (min-width: 992px) {
   .page-template-page-program #main #cta-bar,
-  .category #main #cta-bar  {
+  .category #main #cta-bar, .category #main #cta-bar-custom  {
     background-position: 150% 58%;
     background-size: 65%;
   }
 }
-.page-template-page-program #main #cta-bar a,
-.category #main #cta-bar a {
+.page-template-page-program #main #cta-bar a, .page-template-page-program #main #cta-bar-custom a,
+.category #main #cta-bar a, .category #main #cta-bar-custom a {
   text-align: center;
   padding: 10px 0;
   margin: 0 auto;
@@ -3568,28 +3568,28 @@ object {
   font-weight: 400;
 }
 @media (min-width: 768px) {
-  .page-template-page-program #main #cta-bar a,
-  .category #main #cta-bar a {
+  .page-template-page-program #main #cta-bar a, .page-template-page-program #main #cta-bar-custom a,
+  .category #main #cta-bar a, .category #main #cta-bar-custom a {
     padding-right: 0px;
     padding-top: 20px;
     padding-bottom: 20px;
   }
 }
 @media (min-width: 992px) {
-  .page-template-page-program #main #cta-bar a,
-  .category #main #cta-bar a {
+  .page-template-page-program #main #cta-bar a, .page-template-page-program #main #cta-bar-custom a,
+  .category #main #cta-bar a, .category #main #cta-bar-custom a {
     font-size: 3.6rem;
   }
 }
-.page-template-page-program #main #cta-bar a .fa,
-.category #main #cta-bar a .fa {
+.page-template-page-program #main #cta-bar a .fa, .page-template-page-program #main #cta-bar-custom a .fa,
+.category #main #cta-bar a .fa, .category #main #cta-bar-custom a .fa {
   display: inline-block;
   margin-left: 10px;
   -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
-.page-template-page-program #main #cta-bar a:hover,
-.category #main #cta-bar a:hover {
+.page-template-page-program #main #cta-bar a:hover, .page-template-page-program #main #cta-bar-custom a:hover,
+.category #main #cta-bar a:hover, .category #main #cta-bar-custom a:hover {
   text-decoration: none;
 }
 .page-template-page-program #main .form-section-wrap {
@@ -3812,13 +3812,66 @@ object {
 .page-template-page-program.form-exposed #main {
   overflow: hidden;
 }
-.page-template-page-program.form-exposed #main #cta-bar a .fa {
+.page-template-page-program.form-exposed #main #cta-bar a .fa, .page-template-page-program.form-exposed #main #cta-bar-custom a .fa {
   -webkit-transform: rotate(180deg);
   transform: rotate(180deg);
 }
 .page-template-page-program.form-exposed #main .form-section-wrap {
   display: block;
   /* overflow: visible; */
+}
+
+#cta-bar-custom {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+--wp-admin-theme-color: #007cba;
+--wp-admin-theme-color-darker-10: #006ba1;
+--wp-admin-theme-color-darker-20: #005a87;
+color: #333333;
+box-sizing: border-box;
+margin: 0;
+border: 0;
+font: inherit;
+font-size: 100%;
+vertical-align: baseline;
+display: block;
+position: fixed;
+bottom: 0;
+float: left;
+width: 100%;
+max-width: 100vw;
+margin-bottom: -1px;
+padding: 0!important;
+background: linear-gradient(rgba(255, 92, 18, 0.9), rgba(255, 92, 18, 0.9)), rgba(255, 92, 18, 0.9) url(img/diamonds/coa-pattern.svg) no-repeat scroll;
+z-index: 999;
+cursor: pointer;
+background-position: 150% 58%;
+background-size: 65%;
+}
+
+#cta-bar-custom a {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+--wp-admin-theme-color: #007cba;
+--wp-admin-theme-color-darker-10: #006ba1;
+--wp-admin-theme-color-darker-20: #005a87;
+box-sizing: border-box;
+background-color: transparent;
+border: 0;
+font: inherit;
+vertical-align: baseline;
+text-decoration: none;
+text-align: center;
+padding: 10px 0;
+margin: 0 auto;
+display: block;
+position: relative;
+color: white;
+font-family: "Aleo-Regular", Times, serif;
+line-height: 1.2;
+font-weight: 400;
+padding-right: 0px;
+padding-top: 20px;
+padding-bottom: 20px;
+font-size: 3.6rem;
 }
 
 /*--------------------------------------------------------------
