--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/*  Theme Name: College of the Albemarle 1.2
+    Description: A WordPress starter.
+    Version: 1.0.0
+    Author: VisionPoint Marketing
+*/
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
